--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav class="main-nav">
          <a href="#">Portofolio</a>
         <a href="Order.html">Order</a>
-        <a href="Home.html">
+        <a href="index.html">
           <img src="logo-transparent.png" style="width:122px;height:162px;">
         </a>
         <div class="dropdown">
