--- a/noe.html
+++ b/noe.html
@@ -24,16 +24,7 @@
         <a href="About-us.html">About us</a>
     </nav>
     <main>
-        <h1>NEXT GEN SITES</h1>
-        <article>
-            <h1> SPECIAL DEAL!</h1>
-            <h2>RELEASE BUNDEL | 50.99</h2>
-            <p> 1 Site, Hosting, 4 pages of choice</p>
-            <sub> NO REPAIRS</sub>
-        </article>
-        <article>
-            <h2> Site Pack One</h2>
-        </article>
+        <iframe src="https://www.youtube.com/embed/_ay1p_goP_Y?si=NomQmUXlmcd9_aJY"></iframe>
     </main>
     
 </body>
