--- a/noe.html
+++ b/noe.html
@@ -18,7 +18,7 @@
       <a href="#design">Design</a>
       <a href="#development">Development</a>
       <a href="#marketing">Marketing</a>
-      <a href="noe.html">Marketing</a>
+      <a href="noe.html">Sim Blast</a>
     </div>
   </div>
         <a href="About-us.html">About us</a>
